--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
-    "@types/passport": "^1.0.17"
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16"
   }
 }
