--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16"
+    "@types/passport-google-oauth20": "^2.0.16",
+    "sequelize-cli": "^6.6.2"
   }
 }
