--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
